--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="welcome">Welcome</string>
     <string name="selected_user_name">Selected User Name</string>
     <string name="choose_a_user">Choose a User</string>
-
+    <string name="retry">Try Again</string>
 </resources>
